# QingLiaoChatClient

./: .gitignore  CMakeLists.txt  LICENSE  QingLiaoClient.qrc  README.md  vcpkg.json
include/: QuqiCrypto.hpp  SQLProcess.hpp  definition.hpp  networkEndinass.hpp  regexMatch.hpp  returnStateMessage.hpp  timer.hpp  websiteFunctions.hpp
src/: main.cpp
src/factory/: factory.cpp  factory.h  token.cpp  token.h
src/factory/abstractClass/: abstractRoom.hpp
src/include/: Logger.hpp  networkEndinass.hpp  regexMatch.hpp  timer.hpp  websiteFunctions.hpp
src/include/QuqiCrypto/: aes.hpp  base64.hpp  definition.hpp  md.hpp  pkey.hpp
src/login/: login.cpp  login.h  login.ui
src/mainWindow/: baseMainWindow.cpp  baseMainWindow.h  mainWindow.cpp  mainWindow.h  mainWindow.ui
src/manager/: dataManager.cpp  dataManager.h  manager.cpp  manager.h
src/messageBox/: messageBox.hpp
src/network/: dataPackage.cpp  dataPackage.h  network.cpp  network.h  package.cpp  package.h
src/parser/: Ini.cpp  Json.cpp  Json.h
src/register/: register.cpp  register.h  register.ui
src/stackWidget/: stackWidget.cpp  stackWidget.h
src/start/: start.cpp  start.h  start.ui  startlabel.cpp  startlabel.h
